routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
    extauth: basic
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
          - name: route-name
            value: default
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
    - matches:  
      - path:
          type: PathPrefix
          value: /
        headers:
        - type: Exact
          name: route
          value: a
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
          - name: route-name
            value: route-a
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
    - matches:
      - path:
          type: PathPrefix
          value: /
        headers:
        - type: Exact
          name: route
          value: b
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
          - name: route-name
            value: route-b
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
